--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,12 @@
 	],
 	"host_permissions": [
 	  "<all_urls>"
+	],
+	"content_scripts": [
+	  {
+		"matches": ["<all_urls>"],
+		"js": ["dist/content.js"]
+	  }
 	]
-  }  
+  }
+  
