fastSave and groupSave
fastSave with contentMenu - works
groupSave with contetn menu - need to get implemented

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,9 @@
 	},
 	"permissions": [
 	  "storage",
-	  "activeTab"
+	  "activeTab",
+	  "contextMenus"
+
 	],
 	"host_permissions": [
 	  "<all_urls>"
